2002-04-18  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el: Toggles font-lock-multiline (Emacs 21.1 or newer).

	* lilypond-font-lock.el: Handles multiline-strings. Fontifies notes 
	more strictly. Use more clever regular expressions. Commented regexps.

2002-04-16  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el: "C-c f" does font-lock-fontify-buffer.

2002-04-15  Juergen Reuter  <reuter@ipd.uka.de>

	* scm/grob-description.scm, lily/staff-symbol.cc: added properties
	to control width of staff symbol in ragged-right mode (by request
	of Han-Wen)

	* ly/engraver-init.ly, lily/include/my-lily-parser.hh,
	lily/include/ligature-bracket.hh, lily/lexer.ll, lily/parser.yy,
	lily/ligature-bracket.cc, lily/ligature-bracket-engraver.cc:
	added support for ligature brackets (needed when transcribing
	mensural music)

2002-04-15  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-font-lock.el: Handle scheme-slurs up to seventh level.
	Fontify notes more strictly.

2002-04-15  Han-Wen  <hanwen@cs.uu.nl>

	* mf/feta-din-code.mf: dynamic z sign.

2002-04-13  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el: Prevent recoloring strings and comments.

	* lilypond-font-lock.el: Handle block comments: block comments
	can have also ordinary comments inside.
	
2002-04-13  Han-Wen  <hanwen@cs.uu.nl>

	* lily/stem.cc (get_default_dir): set direction to CENTER if
	invisible. Various other fixes to deal with invisible stems and
	stem-direction == CENTER.

	* lily/rest-collision.cc (do_shift): take direction from note if
	not set.

	* input/regression/tie-grace.ly: new file.

	* lily/tie-engraver.cc (create_grobs): fix tied graces.

	* lily/note-spacing.cc (stem_dir_correction): set fixed space for
	knee correction. Fixes tight spacing for knees.

2002-04-12  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: 1.5.52 released
	
	* lily/*.cc: add some undocced properties.
	scm/grob-description.scm: idem.

2002-04-12  Heikki Junes <hjunes@cc.hut.fi>
